# pyfai

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg
docs/: Makefile  conf.py  fai-env.rst  fai-files.rst  fai-subprocess.rst  fai.rst  index.rst
fai/: __init__.py  env.py  files.py  subprocess.py
tests/: test_env.py  test_files.py  test_lib.py  test_subprocess.py
