[metadata]
name = fai
author = Maximilian Stein
author_email = m@steiny.biz
description = FAI script integration lib
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/st31ny/pyfai
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
dev = pytest
