[metadata]
name = fai
author = Maximilian Stein
author_email = m@steiny.biz
description = FAI script integration lib
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/st31ny/pyfai
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
dev =
    yapf
    pylint
    pytest
    pytest-mock
doc =
    sphinx
    sphinx-paramlinks
# should be automatic via PEP-517/518 but readthedocs does not support it yet
rtd =
    toml
    setuptools_scm[toml]

[build_sphinx]

[yapf]
based_on_style = pep8

[pylint.MASTER]
ignore=_version.py
jobs=0
